Fix Overflow : Hidden Layout

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -53,8 +53,12 @@ body {
   /*background-image: linear-gradient(45deg, rgba(0, 216, 255, .5) 10%, rgba(0, 1, 127, .7));*/
   font-family: Arial, Helvetica, Helvetica Neue, serif;
   /*overflow-y: auto;*/
+  overflow: hidden;
 }
 
+#root{
+  overflow: hidden;
+}
 h2 {
   margin: 0;
   font-size: 2.25rem;
